tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImport1WithExport.errors.txt
tests/cases/compiler/client.ts(3,34): error TS2305: Module 'server' has no exported member 'a'.
tests/cases/compiler/client.ts(5,34): error TS2305: Module 'server' has no exported member 'a'.
tests/cases/compiler/client.ts(7,34): error TS2305: Module 'server' has no exported member 'x'.
tests/cases/compiler/client.ts(7,37): error TS2305: Module 'server' has no exported member 'a'.
tests/cases/compiler/client.ts(9,34): error TS2305: Module 'server' has no exported member 'x'.
tests/cases/compiler/client.ts(11,34): error TS2305: Module 'server' has no exported member 'm'.


==== tests/cases/compiler/server.ts (0 errors) ====
    
    var a = 10;
    export = a;
    
==== tests/cases/compiler/client.ts (6 errors) ====
    export import defaultBinding1, { } from "server";
    export var x1: number = defaultBinding1;
    export import defaultBinding2, { a } from "server";
                                     ~
!!! error TS2305: Module 'server' has no exported member 'a'.
    export var x1: number = defaultBinding2;
    export import defaultBinding3, { a as b } from "server";
                                     ~~~~~~
!!! error TS2305: Module 'server' has no exported member 'a'.
    export var x1: number = defaultBinding3;
    export import defaultBinding4, { x, a as y } from "server";
                                     ~
!!! error TS2305: Module 'server' has no exported member 'x'.
                                        ~~~~~~
!!! error TS2305: Module 'server' has no exported member 'a'.
    export var x1: number = defaultBinding4;
    export import defaultBinding5, { x as z,  } from "server";
                                     ~~~~~~
!!! error TS2305: Module 'server' has no exported member 'x'.
    export var x1: number = defaultBinding5;
    export import defaultBinding6, { m,  } from "server";
                                     ~
!!! error TS2305: Module 'server' has no exported member 'm'.
    export var x1: number = defaultBinding6;
    